# bluetooth-manager-sidebar

./: AGENTS.md  README.md  bm-sidebar  bm-sidebar.css  meson.build
.github/workflows/: build-packages.yml
packaging/: nfpm.yaml
packaging/aur/: PKGBUILD.in
src/: meson.build
src/app/: application-action-data.h  application-actions.c  application-adapter-actions.c  application-adapter-actions.h  application-adapter-info-model.c  application-adapter-info-model.h  application-adapter-info-page.c  application-adapter-info-page.h  application-audio-actions.c  application-audio-actions.h  application-audio-adapter.c  application-audio-adapter.h  application-audio-commands.c  application-audio-commands.h  application-audio-page-loader.c  application-audio-page-loader.h  application-audio-profile-model.c  application-audio-profile-model.h  application-audio-runtime.c  application-audio-runtime.h  application-audio-service-access.h  application-bluetooth-commands.c  application-bluetooth-commands.h  application-bluez-adapter.c  application-bluez-adapter.h  application-bluez-runtime.c  application-bluez-runtime.h  application-bluez-service-access.h  application-chrome-state.c  application-chrome-state.h  application-chrome.c  application-chrome.h  application-command-runtime.c  application-command-runtime.h  application-commands.c  application-commands.h  application-data-access.c  application-data-access.h  application-device-actions.c  application-device-actions.h  (+114 more)
src/audio/: audio-profile-cache.c  audio-profile-cache.h  audio-profile-load-manager.c  audio-profile-load-task.c  audio-profile-load-task.h  audio-profile-loader.c  audio-profile-loader.h  audio-profile-messages.c  audio-profile-messages.h  audio-profile-model.c  audio-profile-operations.c  audio-profile-operations.h  audio-profile-parser.c  audio-profile-parser.h  audio-profile-query.c  audio-profile-repository.c  audio-profile-repository.h  audio-profile-set-manager.c  audio-profile-set-task.c  audio-profile-set-task.h  audio-profile-setter.c  audio-profile-setter.h  audio-profiles-internal.h  audio-profiles.c  audio-profiles.h  pactl-runner.c  pactl-runner.h
src/bluez/: bluez-adapter-method-call.c  bluez-adapter-method-call.h  bluez-adapter-policy.c  bluez-adapter-policy.h  bluez-adapter-power-recovery.c  bluez-adapter-power-recovery.h  bluez-adapter-power-state.c  bluez-adapter-power-state.h  bluez-adapter-power-workflow.c  bluez-adapter-power-workflow.h  bluez-adapter-report.c  bluez-adapter-report.h  bluez-adapter.c  bluez-adapter.h  bluez-battery-cache.c  bluez-battery-cache.h  bluez-cache-applier.c  bluez-cache-applier.h  bluez-cache-private.h  bluez-cache-query.c  bluez-cache-query.h  bluez-cache-selection.c  bluez-cache-selection.h  bluez-cache-selector.c  bluez-cache-selector.h  bluez-cache-status.c  bluez-cache-status.h  bluez-cache-updater.c  bluez-cache-updater.h  bluez-cache.c  bluez-cache.h  bluez-client-adapter-service.c  bluez-client-adapter-service.h  bluez-client-adapter.c  bluez-client-adapter.h  bluez-client-device-service.c  bluez-client-device-service.h  bluez-client-device.c  bluez-client-device.h  bluez-client-discovery.c  (+127 more)
src/cli/: cli.c  cli.h  main.c
src/command/: command-client.c  command-codec.c  command-codec.h  command-ipc.c  command-ipc.h  command-socket-path.c  command-socket-path.h  command-socket.c  command-socket.h  ipc-constants.h  sidebar-command.c  sidebar-command.h  startup-command-router.c  startup-command-router.h
src/core/: asset-paths.c  asset-paths.h  config-paths.c  config-paths.h  config.h  device-icon-constants.h  display.c  display.h  runtime-paths.c  runtime-paths.h  target-output.c  target-output.h  timed-subprocess.c  timed-subprocess.h  user-paths.c  user-paths.h
src/obex/: obex-agent-dispatch.c  obex-agent-dispatch.h  obex-agent-handler.c  obex-agent-handler.h  obex-agent-lifecycle.c  obex-agent-lifecycle.h  obex-agent.c  obex-agent.h  obex-authorization-store.h  obex-dbus.h  obex-incoming-active-authorization.c  obex-incoming-active-authorization.h  obex-incoming-authorization-acceptance.c  obex-incoming-authorization-acceptance.h  obex-incoming-authorization-flow.c  obex-incoming-authorization.c  obex-incoming-authorization.h  obex-incoming-controller.c  obex-incoming-controller.h  obex-incoming-notifications.c  obex-incoming-notifications.h  obex-incoming-storage.c  obex-incoming-storage.h  obex-incoming-transfer.c  obex-incoming-transfer.h  obex-notifications.c  obex-notifications.h  obex-notifier.c  obex-notifier.h  obex-outgoing-controller.c  obex-outgoing-controller.h  obex-outgoing-dbus.c  obex-outgoing-dbus.h  obex-outgoing-notifications.c  obex-outgoing-notifications.h  obex-outgoing-request.c  obex-outgoing-request.h  obex-outgoing-session-events.c  obex-outgoing-session-events.h  obex-outgoing-session.c  (+52 more)
src/pairing/: pairing-prompt-presenter.c  pairing-prompt-presenter.h  pairing-prompt-response.c  pairing-prompt-response.h  pairing-prompt-session.c  pairing-prompt-session.h
src/settings/: settings-json-codec.c  settings-json-codec.h  settings-store.c  settings.c  settings.h
src/sidebar/: sidebar-chrome.c  sidebar-chrome.h  sidebar-window-chrome-proxy.c  sidebar-window-chrome-proxy.h  sidebar-window-panel.c  sidebar-window-panel.h  sidebar-window-shell.c  sidebar-window-shell.h  sidebar-window-state.c  sidebar-window-state.h  sidebar-window-toast.c  sidebar-window-toast.h  sidebar-window.c  sidebar-window.h
